[RESTEASY-2886] RESTEasy Java 16 Fixes (#2796)
* [RESTEASY-2904] Upgrade the test WildFly version to 23.0.2.Final.

https://issues.redhat.com/browse/RESTEASY-2904

* [RESTEASY-2895] Upgrade Google Guice to 5.0.1

https://issues.redhat.com/browse/RESTEASY-2895

* [RESTEASY-2896] Upgrade Undertow to 2.2.7.Final

https://issues.redhat.com/browse/RESTEASY-2896

* [RESTEASY-2897] Upgrade Weld to 3.1.7.SP1 and the API to 3.1.SP4

https://issues.redhat.com/browse/RESTEASY-2897

* [RESTEASY-2898] Upgrade WildFly CLI to 15.0.1.Final.

https://issues.redhat.com/browse/RESTEASY-2898

* [RESTEASY-2899] Upgrade mockito to 3.10.0

https://issues.redhat.com/browse/RESTEASY-2899

* [RESTEASY-2900] Upgrade Spring to 5.3.7.

https://issues.redhat.com/browse/RESTEASY-2900

* [RESTEASY-2902] Drop legacy WildFly security configuration options and only configure Elytron.

https://issues.redhat.com/browse/RESTEASY-2902

* [RESTEASY-2903] Ignore remote EJB tests until WFLY-14668 is resolved and WildFly 24 is released.

https://issues.redhat.com/browse/RESTEASY-2903

* [RESTEASY-2886] Add the JDK module options required for Java 16+. Upgrade the version of Jetty used for the MicroProfile TCK and modify the timeout for Java 16+.

https://issues.redhat.com/browse/RESTEASY-2886